--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ __pycache__/
 *.traj
 *.cube
 *.wfn
+*.tex
+*.png
 
 # Large raw data (keep processed results only)
 raw_data/
@@ -19,3 +21,5 @@ tmp/
 
 # OS
 .DS_Store
+
+
